force-app/main/default/objects/DD_Quote_Coverage_Config__c/DD_Quote_Coverage_Config__c.object-meta.xml
<CustomObject>
    <description>Optional coverage-level overrides at quote time. Only created when agent overrides a coverage default.</description>
    <label>Quote Coverage Config</label>
    <nameField><displayFormat>QCC-{000000}</displayFormat><label>Override ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Quote Coverage Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>