force-app/main/default/objects/DD_Quote_Coverage_Config__c/fields/Coverage_Spec__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Spec__c</fullName>
    <label>Coverage Spec</label>
    <type>Lookup</type>
    <referenceTo>DD_Coverage_Spec__c</referenceTo><relationshipLabel>Quote Coverage Configs</relationshipLabel><relationshipName>Quote_Cov_Configs</relationshipName><required>false</required>
    <description>Reference to master coverage spec</description>
</CustomField>