force-app/main/default/objects/DD_Quote_Coverage_Config__c/fields/Is_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Is_Excluded__c</fullName>
    <label>Excluded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Agent excluded this coverage from quote</description>
</CustomField>