force-app/main/default/objects/DD_Quote_Coverage_Config__c/fields/Override_Coinsurance_NonPPO__c.field-meta.xml
<CustomField>
    <fullName>Override_Coinsurance_NonPPO__c</fullName>
    <label>Override Coinsurance Non-PPO</label>
    <type>Percent</type>
    <precision>5</precision><scale>0</scale><required>false</required>
    <description>Null = inherit from master</description>
</CustomField>