force-app/main/default/objects/DD_Quote_Coverage_Config__c/fields/Quote_Plan_Config__c.field-meta.xml
<CustomField>
    <fullName>Quote_Plan_Config__c</fullName>
    <label>Quote Plan Config</label>
    <type>MasterDetail</type>
    <referenceTo>DD_Quote_Plan_Config__c</referenceTo><relationshipLabel>Coverage Configs</relationshipLabel><relationshipName>Coverage_Configs</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <description>Parent quote plan config</description>
</CustomField>